fixing some bugs, organizing code and wrapping up project

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,7 +132,7 @@ body.dark-mode {
 
 .center {
   text-align: center;
-  padding-bottom: 250px;
+  padding-bottom: 450px;
 }
 
 .MuiTableBody-root .MuiTableRow-root {
@@ -161,7 +161,7 @@ body.dark-mode {
   }
 
   .ModalPaperMoble {
-      margin-top:500px;
+      margin-top:625px;
   }
 
   #ModalIcon {
@@ -178,3 +178,5 @@ body.dark-mode {
   height: 300px;
   background-color: #fff;
 }
+
+.pointer {cursor: pointer;}
